--- a/Cygni.Doc/Cygni-short-ref/template_Article.tex
+++ b/Cygni.Doc/Cygni-short-ref/template_Article.tex
@@ -36,7 +36,6 @@ Cygni is designed by me. I spent a lot of spare time on it, and I love it very m
 	\item lambda
 	\item class
 	\item var
-	\item unpack
 	\item break
 	\item continue
 	\item return	
@@ -207,20 +206,20 @@ class DerivedClass: MyClass {
 
 \subsubsection{Reserved Fields}
 \begin{itemize}
-	\item \_\_init
-	\item \_\_add
-	\item \_\_sub
-	\item \_\_mul
-	\item \_\_div
-	\item \_\_mod
-	\item \_\_pow
-	\item \_\_unp
-	\item \_\_unm
-	\item \_\_cmp
-	\item \_\_eq
-	\item \_\_getItem
-	\item \_\_setItem
-	\item \_\_toStr
+	\item \_\_init\_\_
+	\item \_\_add\_\_
+	\item \_\_sub\_\_
+	\item \_\_mul\_\_
+	\item \_\_div\_\_
+	\item \_\_mod\_\_
+	\item \_\_pow\_\_
+	\item \_\_unp\_\_
+	\item \_\_unm\_\_
+	\item \_\_cmp\_\_
+	\item \_\_eq\_\_
+	\item \_\_getItem\_\_
+	\item \_\_setItem\_\_
+	\item \_\_toStr\_\_
 \end{itemize}
 
 
